Fix multi paragraph misaligning layout program description

--- a/src/styles/program.scss
+++ b/src/styles/program.scss
@@ -92,15 +92,6 @@
 				opacity: 1;
 			}
 		}
-
-		@include media-desktop {
-			&:checked {
-				& ~ .program__description {
-					max-height: 50rem;
-					opacity: 1;
-				}
-			}
-		}
 	}
 }
 
@@ -158,8 +149,12 @@
 	@include media-desktop {
 		flex-direction: row-reverse;
 		justify-content: flex-end;
-		p {
+
+		div {
 			width: 60%;
+		}
+
+		p {
 			margin: 0 0 1.6rem;
 
 			&:last-of-type {
